fix:fix z-index in slider

--- a/SHELTER/sass/ourFriends.scss
+++ b/SHELTER/sass/ourFriends.scss
@@ -64,7 +64,7 @@ $Arial: Arial, Verdana, sans-serif;
     align-items: center;
 }
 .slider__card {
-    z-index: 220;
+    // z-index: 220;
     height: 43.5rem;
     width: 27rem;
     border-radius: 0.9rem;
