--- a/SHELTER/sass/styleForModalWindow.scss
+++ b/SHELTER/sass/styleForModalWindow.scss
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 100vh;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   background: rgba(41, 41, 41, 0.692);
   display: flex;
   flex-direction: column;
